Upgrade spring-boot version